Removed trailing dots in documentation